-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.2
-
None
-
-
763752ded1cbd7a64c623434de666fca6619541b (qt/qtbase/dev) 2eba5cb403b2f2812bca5563183f42a3211c9d07 (qt/qtbase/5.15)
After porting an application from Qt 5.6 to Qt 5.12 we found a crash when exiting our application.
We were able to track down the issue back to commit 1b9af84c1b (QTBUG-70148). This commit added the following check in qtbase/src/gui/opengl/qopenglvertexarrayobject.cpp (line 212):
if (QThread::currentThread() != qGuiApp->thread()) { ctx = 0; } else {
The crash happens because qGuiApp is already set to nullptr before this code is reached.
The problem described in QTBUG-73824 also seems to have the same issue.
- is duplicated by
-
QTBUG-86875 Crash on quit, perhaps with a double dealloc of private Qt data
-
- Closed
-