Avoid using qGuiApp in QOpenGLVao::destroy()

There are convoluted cases, based on the backtrace attached
to the associated bug report, where we attempt to destroy a
QOpenGLVertexArrayObject during the destruction of Q(Gui)Application.

Just avoid accessing qGuiApp in destroy(). Rather, store it in create().

Fixes: QTBUG-75138
Change-Id: If8e67301c0843cbf3a409dcf427f44c42079de2f
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit 763752ded1cbd7a64c623434de666fca6619541b)
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>